log/build_2021-12-11_21-11-22/py_chester_pkg/stderr.log
  File "/home/ubuntu/ros2_ws/install/py_chester_pkg/lib/python3.8/site-packages/py_chester_pkg/RoboticArmDriver.py", line 25
    }
    ^
SyntaxError: unmatched '}'

